# football-team-manager

./: .gitignore  pyproject.toml
alembic/versions/: 7f7343a4c6eb_db_create.py
app/: __main__.py  commands.py  settings.py
app/src/dialogs/handlers/: admin.py  user.py
app/src/dialogs/keyboards/: kb_admin.py  kb_create_team.py  user.py
app/src/services/: admin.py  teams.py
app/src/services/db/: db_requests.py  tables.py
migrations/: env.py
migrations/versions/: e5b27df24cb6_create_db.py
