[tool.poetry]
name = "football-team-manager"
version = "0.1.0"
description = "Распределение игроков на команды"
authors = ["aldi <alkin.denis@gmail.com>"]
readme = "README.md"
packages = [{include = "football-team-manager"}]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.1.1"
python-dotenv = "^0.21.0"
loguru = "^0.6.0"
SQLAlchemy = "^2.0.22"
alembic = "^1.12.0"
aiosqlite = "^0.19.0"
pydantic-settings = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
